--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:background="@drawable/lifegreen"
         tools:ignore="MissingConstraints">
 
         <!-- Seção de dados pessoais -->
@@ -27,6 +28,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="Nome"
+                android:background="@drawable/rounded_edittext"
                 android:inputType="textPersonName"
                 android:layout_marginEnd="8dp" />
 
@@ -36,6 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="CPF"
+                android:background="@drawable/rounded_edittext"
                 android:inputType="number" />
         </LinearLayout>
 
@@ -49,27 +52,30 @@
             <EditText
                 android:id="@+id/txtTelefone"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
+                android:layout_height="55dp"
                 android:layout_weight="1"
                 android:hint="Telefone"
                 android:inputType="phone"
+                android:background="@drawable/rounded_edittext"
                 android:layout_marginEnd="8dp" />
 
             <EditText
                 android:id="@+id/txtEmail"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
+                android:layout_height="55dp"
                 android:layout_weight="1"
                 android:hint="Email"
+                android:background="@drawable/rounded_edittext"
                 android:inputType="textEmailAddress" />
         </LinearLayout>
 
         <EditText
             android:id="@+id/txtSenha"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="55dp"
             android:hint="Senha"
             android:inputType="textPassword"
+            android:background="@drawable/rounded_edittext"
             android:layout_marginBottom="16dp" />
 
         <!-- Seção de endereço -->
@@ -82,10 +88,11 @@
             <EditText
                 android:id="@+id/txtCep"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
+                android:layout_height="55dp"
                 android:layout_weight="1"
                 android:hint="CEP"
                 android:inputType="number"
+                android:background="@drawable/rounded_edittext"
                 android:layout_marginEnd="8dp" />
 
             <Button
@@ -98,9 +105,10 @@
         <EditText
             android:id="@+id/txtLogradouro"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="55dp"
             android:hint="Logradouro"
             android:inputType="text"
+            android:background="@drawable/rounded_edittext"
             android:layout_marginBottom="16dp" />
 
         <LinearLayout
@@ -113,27 +121,30 @@
             <EditText
                 android:id="@+id/txtNumero"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
+                android:layout_height="55dp"
                 android:layout_weight="1"
                 android:hint="Número"
                 android:inputType="number"
+                android:background="@drawable/rounded_edittext"
                 android:layout_marginEnd="8dp" />
 
             <EditText
                 android:id="@+id/txtComplemento"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
+                android:layout_height="55dp"
                 android:layout_weight="1"
                 android:hint="Complemento"
+                android:background="@drawable/rounded_edittext"
                 android:inputType="text" />
         </LinearLayout>
 
         <EditText
             android:id="@+id/txtBairro"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="55dp"
             android:hint="Bairro"
             android:inputType="text"
+            android:background="@drawable/rounded_edittext"
             android:layout_marginBottom="16dp" />
 
         <LinearLayout
@@ -145,18 +156,20 @@
             <EditText
                 android:id="@+id/txtLocalidade"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
+                android:layout_height="55dp"
                 android:layout_weight="1"
                 android:hint="Localidade"
                 android:inputType="text"
+                android:background="@drawable/rounded_edittext"
                 android:layout_marginEnd="8dp" />
 
             <EditText
                 android:id="@+id/txtEstado"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
+                android:layout_height="55dp"
                 android:layout_weight="1"
                 android:hint="Estado"
+                android:background="@drawable/rounded_edittext"
                 android:inputType="text" />
         </LinearLayout>
         <!-- Botões -->
