--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="background_light">#FAFAFA</color>
+    <color name="black">#212121</color>
+    <color name="button_primary">#6200EA</color>
+    <color name="button_secondary">#03DAC5</color>
+    <color name="button_decrement">#FF5252</color>
+    <color name="button_increment">#4CAF50</color>
+    <color name="button_remove">#E57373</color>
 </resources>
